kubernetes/apps/networking/envoy-gateway/app/external/gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.ok8.sh/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    external-dns.kubernetes.io/target: &hostname external.ok8.sh
    gatus.home-operations.com/endpoint: |-
      client:
        dns-resolver: tcp://1.1.1.1:53
      group: external
spec:
  gatewayClassName: envoy-external
  addresses:
    - type: IPAddress
      value: &address 10.0.20.11
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: *address
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: envoy-external
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ok8-sh-tls
